# embench-plus-plus

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
core/: CMakeLists.txt  concepts.h  embench++.h
docs/html/: _s_e_g_g_e_r___r_t_t_8h_source.html  _s_e_g_g_e_r___r_t_t___conf_8h_source.html  annotated.html  classembpp_1_1_benchmark-members.html  classembpp_1_1_benchmark.html  classembpp_1_1metrics_1_1core_1_1cyccnt_1_1_cycle_counter-members.html  classembpp_1_1metrics_1_1core_1_1cyccnt_1_1_cycle_counter.html  classembpp_1_1print_1_1_printer-members.html  classembpp_1_1print_1_1_printer.html  classembpp_1_1print_1_1_r_t_t-members.html  classembpp_1_1print_1_1_r_t_t.html  classembpp_1_1proc_1_1_min_max_avg-members.html  classembpp_1_1proc_1_1_min_max_avg.html  classes.html  conceptembpp_1_1_metricable.html  conceptembpp_1_1_printer_impl.html  conceptembpp_1_1_results_processor.html  concepts.html  concepts_8h_source.html  cyccnt_8h_source.html  dir_024f73ef3f5a9545f0b42f594340cbd9.html  dir_0f9a38d258f085f2d7b7480ad70aa9ba.html  dir_1659819cd7e3f20e7f6badbf79438dcd.html  dir_1f920766951cdd61b8f4f7b24e1cf501.html  dir_203cf801a0cedf4b816a1ac050b2855b.html  dir_21cc14557239670125bb6f32b7520807.html  dir_2d3d26aeb21eb6eb9740352d7e4d6e04.html  dir_2fb59a7a3851686deaa9c7c3af47b815.html  dir_3d01828038fb490ea94761956f0fcade.html  dir_3f6157423b1e24fbbe29232d89e92d45.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_46986d6607504ec3c95125d636465ee4.html  dir_4ade0ea679b6b86ec3d1982c57d5c424.html  dir_51be722dec144e6fff5c5ccb8c429982.html  dir_5acde839e43c65b944bd777deff2ad59.html  dir_5ce62901b3a1d45c7276b9a5f6382f8e.html  dir_5fd497c6e2e42bf061a698a7bb29b116.html  dir_6e0fa824e7b66fca39028d1c76cece19.html  dir_7697b0ef1b9b6f542c06fd113d2e9a0e.html  dir_7b9386b02e976a897430e3a685e8b621.html  (+43 more)
docs/latex/: _s_e_g_g_e_r___r_t_t_8h_source.tex  _s_e_g_g_e_r___r_t_t___conf_8h_source.tex  annotated.tex  classembpp_1_1_benchmark.tex  concepts.tex  (+22 more)
include/: embench++.h
metrics/: CMakeLists.txt
printers/: CMakeLists.txt
printers/rtt/: CMakeLists.txt  printer_rtt.cpp  printer_rtt.h
printers/rtt/segger_rtt/Syscalls/: SEGGER_RTT_Syscalls_GCC.c
proc/: CMakeLists.txt
src/: embench++.cpp
(+57 files in other folders)
